syntax = "proto3";

package proto;
option go_package = "../pb";

// protoc -I=pb --go_out=pb  --go-grpc_out=pb  pb/setting_service.proto
service SettingService {
    rpc SetDefaultLanguage (SetDefaultLanguageReq) returns (SettRes){}
    rpc SetChangingParentStatus (EmptySettReq) returns (SettRes){}
}

message EmptySettReq{

}

message SettRes {
    string err = 1;
}

message SetDefaultLanguageReq {
    int32 lang_id = 1;
}
